this four tasks

--- a/tasks/task1.html
+++ b/tasks/task1.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The favorite Animals</title>
 </head>
 <body>
 
+     <h1>Birds</h1>
      
+     <hr>
+     <p>We can save birds by doing little
+         things like providing a source of water 
+         for them to drink. Further, we can elevate 
+         bird feeders and plant native plants and trees
+          for them. Similarly, we can put up birdhouses 
+          and garden organically so 
+        that birds can feed on insects and worms.</p>
 
 </body>
 </html>
