--- a/tasks/task4.html
+++ b/tasks/task4.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+<h1>Links Task4</h1>
+<hr>
+<p>Click here to go to Orange or Google<br>
+    <br><a href="https://new.orange.jo/en">Orange</a> and <a href="https://www.google.com/">Google</a></p>
+
 </body>
 </html>
