--- a/tasks/task2.html
+++ b/tasks/task2.html
@@ -7,12 +7,12 @@
 </head>
 <body>
      
-    <h1>haed1</h1>
-    <h2>haed2</h2>
-    <h3>haed3</h3>
-    <h4>haed4</h4>
-    <h5>head5</h5>
-    <h6>head6</h6>
+    <h1>haed1#1</h1>
+    <h2>haed2#1</h2>
+    <h3>haed3#1</h3>
+    <h4>haed4#1</h4>
+    <h5>head5#1</h5>
+    <h6>head6#1</h6>
 
 </body>
 </html>
