These are my tasks

--- a/14 - 6/task5.html
+++ b/14 - 6/task5.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Ahmad AlKhatatbeh</h1><br>
     <p>I am looking forword to improve my life and achive my dreams</p><br>
-    <a href="https://www.facebook.com/">facebook</a><br>
-    <a href="https://www.instagram.com/">Instagram</a><br>
+    <a target="_blank" href="https://www.facebook.com/">facebook</a><br>
+    <a target="_self" href="https://www.instagram.com/">Instagram</a><br>
     <p>I like driving cars and writing code </p>
  
 </body>
