this three tasks

--- a/15-6/task3.html
+++ b/15-6/task3.html
@@ -31,7 +31,7 @@
                 <td>Eng</td>
                 <td>Mat</td>
                 <td>Che</td>
-                <td rowspan="6"></td>
+                <td rowspan="6"> L<br>U<br>N<br>C<br>H</td>
                 <td colspan="3">LAB</td>
                
                 <td>phy</td>
