--- a/15-6/task1.html
+++ b/15-6/task1.html
@@ -17,10 +17,10 @@
         <ol type="1">
             <li>Nested Item2.1</li>
             <li>Nested Item2.2</li>
-                    <ul style="list-style-type:circle;">
+                    <ul type="circle">
                         <li>Nested Item2.2.1</li> 
                         <li>Nested Item2.2.2</li>
-                        <ul>
+                        <ul  type="square">
                             <li>Nested Item2.2.2.1</li> 
                             <li>Nested Item2.2.2.2</li>
                         </ul>
