--- a/15-6/task3.html
+++ b/15-6/task3.html
@@ -4,25 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        table, th, td {
-          border:1px solid black;
-        }
-        </style>
+    
 </head>
 <body>
-    <table>
+    <table border="2">
         <thead >
             <tr>
                 <th>Day/Period</th>
-                <th>9:30-10:20</th>
-                <th>10:20-11:10</th>
-                <th>11:10-12:00</th>
+                <th>I<br>9:30-10:20</th>
+                <th>II<br>10:20-11:10</th>
+                <th>III<br>11:10-12:00</th>
                 <th> 12:00-12:40</th>
-                <th>12:40-1:30</th>
-                <th>1:30-2:20</th>
-                <th>2:20-3:10</th>
-                <th>3:10-4:00</th>
+                <th>IV<br>12:40-1:30</th>
+                <th>V<br>1:30-2:20</th>
+                <th>VI<br>2:20-3:10</th>
+                <th>VII<br>3:10-4:00</th>
            </tr>
         </thead>
         <tbody>
@@ -39,7 +35,6 @@
             <tr>
                 <th>Tuseday</th>
                 <td colspan="3">Lab</td>
-                
                 <td>Eng</td>
                 <td>Che</td>
                 <td>Mat</td>
