Co-authored-by: ahmadkhatatbe <ahmedkatatbeh123@gmail.com> Co-authored-by: Ahmed Al-khatatbeh <127099389+ahmadkhatatbe@users.noreply.github.com>

--- a/18-6/task1.html
+++ b/18-6/task1.html
@@ -9,7 +9,7 @@
     <h1>Registration</h1>
 <form action="">
     <fieldset>
-<h2>Personal detail</h2><hr><br>
+<h2>Personal details</h2><hr><br>
 <label for="fname">First Name :</label>
 <input type="text" name="fname" value="" id="fname"  placeholder="Enter your first name" autofocus required ><br><br>
 <label for="lname">Last Name :</label>
