Co-authored-by: ahmadkhatatbe <ahmedkatatbeh123@gmail.com> Co-authored-by: Ahmed Al-khatatbeh <127099389+ahmadkhatatbe@users.noreply.github.com>

--- a/18-6/task3.html
+++ b/18-6/task3.html
@@ -23,7 +23,7 @@
         <label for="coffee">coffee</label><br>
         <input type="radio" name="radio" value="tea">
         <label for="tea">tea</label> <br>
-        <input type="radio" name="radio" value="hotchocolate">
+        <input type="radio" name="radio" value="chocolate">
         <label for="chocolate">hot chocolate</label><br><br>
         <label for="checkbox">What ice cream do you like ?</label><br>
         <input type="checkbox"name="chocolate">
