Co-authored-by: ahmadkhatatbe <ahmedkatatbeh123@gmail.com> Co-authored-by: Ahmed Al-khatatbeh <127099389+ahmadkhatatbe@users.noreply.github.com>

--- a/20-6/task2.html
+++ b/20-6/task2.html
@@ -5,6 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <style>
+        .card{
+
+width: 200px;
+height: 600px;
+border: 1px solid black;
+display:inline-block;
+   overflow: hidden;
+}
+.image{
+width:450px ;
+height: 100px;
+}
+
+.footer1{
+color: white;
+margin-top: 320px;
+padding: 19px 10px;
+background-color: black;
+
+}
+.footer{
+color: white;
+margin-top:125px;
+background-color: black;
+padding: 20px 20px;
+}
+
+    </style>
 </head>
 <body>
       <div class="three-cards">
