--- a/20-6/task3.html
+++ b/20-6/task3.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <style>
+      .image-task3{
+    width: 100px;
+    height: 300px;
+    border: 1px solid black;
+    position: fixed;
+    
+    right: 0;
+    
+}
+    </style>
 </head>
 <body> 
     <img class="image-task3" src="/20-6/mouse.jpg" alt="image">
