--- a/20-6/task4.html
+++ b/20-6/task4.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <style>
+        div p{
+    width: 150px;
+    height:150px;
+    border: 3px dotted black;
+    background-color: red;
+    display: inline-block;
+}
+.substatic-2 ,.subrelative-2,.subabsolute-2{
+    background-color: green;
+}
+
+.relative{
+   
+}
+.subrelative-2{
+    position: relative;
+    bottom: -40px;
+    right: -30px;
+
+}
+
+  
+.div-absolute-2{
+   
+ }
+.subabsolute-2{
+    position: absolute;
+    margin-top: 40px;
+   left: 20px;;
+
+}
+    </style>
 </head>
 <body>
     <div>
