--- a/21-6/task1.html
+++ b/21-6/task1.html
@@ -9,7 +9,8 @@
         .container{
     border: 5px solid orange;
     display: flex;
-justify-content: stretch;
+    justify-content: stretch;
+    text-align: center;
    
     
     
