--- a/25-june-2023/task2.html
+++ b/25-june-2023/task2.html
@@ -12,6 +12,8 @@
     animation-name: move;
     animation-duration: 8s;
     animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-timing-function:ease-out;
     border-radius: 10px;
    
 }
