--- a/26-june-2023/task3.html
+++ b/26-june-2023/task3.html
@@ -50,7 +50,7 @@
   </nav>
 
 </div>
-<div class="container sm m-5 px-5"> 
+<div class="container sm justify-content-center my-5"> 
   <h1>Hello,world!</h1>
   <div class="d-block j">
      <p >This is Execrcise it includes a large callout called a jumbotron and three supporting of content.</p>
@@ -62,7 +62,7 @@
 
 </div>
 
-<div class="row ">
+<div class="row  m-5 px-5">
   <div class="card col-sm-4 ">
     <div class="card-body  ">
       <h1>Heading</h1>
