--- a/26-june-2023/task3.html
+++ b/26-june-2023/task3.html
@@ -18,7 +18,7 @@
   <nav class="  navbar navbar-expand-sm bg-dark navbar-dark justify-content-center w-100">
 
     <!-- Links -->
-    <ul class="navbar-nav table-hover ">
+    <ul class="navbar-nav  ">
       <li class="nav-item">
         <a class="nav-link" href="#">Bootstrap Mini-Project</a>
       </li>
@@ -50,7 +50,7 @@
   </nav>
 
 </div>
-<div class="container sm justify-content-center m-5 "> 
+<div class="container sm align-content-center m-5 "> 
   <h1>Hello,world!</h1>
   <div class="d-block j">
      <p >This is Execrcise it includes a large callout called a jumbotron and three supporting of content.</p>
@@ -62,7 +62,7 @@
 
 </div>
 
-<div class="row  m-5 ">
+<div class="row  align-content-center m-5 ">
   <div class="card col-sm-4 ">
     <div class="card-body  ">
       <h1>Heading</h1>
