Co-authored-by: ahmadkhatatbe <ahmedkatatbeh123@gmail.com> Co-authored-by: Ahmed Al-khatatbeh <127099389+ahmadkhatatbe@users.noreply.github.com>

--- a/project-html-css/portfolio.html
+++ b/project-html-css/portfolio.html
@@ -22,7 +22,7 @@
         </label>
 
             <ul class="nav">
-                <li class="" id="home"> <a href="">Home</a> </li>
+                <li class="" id="home"> <a href="#Home">Home</a> </li>
                 <li class="sub-nav"><a href="#Education">Education</a></li>
                 <li class="sub-nav"><a href="#Skills">Skills</a></li>
                 <li class="sub-nav"><a href="#References">References</a></li> 
@@ -32,7 +32,7 @@
         </nav>
     </header>
     
-    <div class="info-personal">
+    <div class="info-personal"  id="Home">
 
       <div class="info">
         <h2><small>Hi there <span>I'm Ahmad,</span></small><br>I'm full Stack
